# Robot_Anti-art

./: CMakeLists.txt  CmakeLists.txt  README.md  Robot_controller.cpp  Robot_controller.h  Robot_server_interaction.cpp  Robot_server_interaction.h  Server.cpp  Server.h  main.cpp
DOKS/: Concept_Model.txt  Sequence_diagram.txt  Use_case_diagram.txt  ТЗ_Робот.odt
